# desktop--KurentoGstreamer

./: .gitignore  2.c  3.c  CMakeLists.txt  Makefile  README.org  a.out  build.sh  main.cpp  s.sh
client/: package-lock.json  package.json  server.js
client2/: package-lock.json  package.json  server.js
debian/: changelog  control
module/: CMakeLists.txt  bash.conf.sh  config.h.cmake  mnscmixer-dbgsym_0.0.1~rc1.18.04~20210112195349.gbp5cc105_amd64.ddeb  mnscmixer-dbgsym_0.0.1~rc1.18.04~20210113111508.gbp9967f4_amd64.ddeb  mnscmixer-dbgsym_0.0.1~rc1.18.04~20210114085356.gbp108058_amd64.ddeb  mnscmixer-dbgsym_0.0.1~rc1.18.04~20210114153309.gbpbd1a5a_amd64.ddeb  mnscmixer-dbgsym_0.0.1~rc1.18.04~20210115153404.gbp7a62c0_amd64.ddeb  mnscmixer-dev_0.0.1~rc1.18.04~20210112195349.gbp5cc105_amd64.deb  mnscmixer-dev_0.0.1~rc1.18.04~20210113111508.gbp9967f4_amd64.deb  mnscmixer-dev_0.0.1~rc1.18.04~20210114085356.gbp108058_amd64.deb  mnscmixer-dev_0.0.1~rc1.18.04~20210114153309.gbpbd1a5a_amd64.deb  mnscmixer-dev_0.0.1~rc1.18.04~20210115153404.gbp7a62c0_amd64.deb  mnscmixer_0.0.1~rc1.18.04~20210112195349.gbp5cc105_amd64.deb  mnscmixer_0.0.1~rc1.18.04~20210113111508.gbp9967f4_amd64.deb  mnscmixer_0.0.1~rc1.18.04~20210114085356.gbp108058_amd64.deb  mnscmixer_0.0.1~rc1.18.04~20210114153309.gbpbd1a5a_amd64.deb  mnscmixer_0.0.1~rc1.18.04~20210115153404.gbp7a62c0_amd64.deb  (+3 more)
module/src/gst-plugins/: CMakeLists.txt  gstmnscmixer.c  gstmnscmodule.cpp  gstmnscmodule.h  mnscmodule.c
src/gst-plugins/: CMakeLists.txt  gstmnscmixer.c  gstmnscmixer.h  mnscmixer.c
tests with audio/: module.c  (+3 more)
(+111 files in other folders)
